--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Invoice/EditorTemplates/CaseInvoiceSettings.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Invoice/EditorTemplates/CaseInvoiceSettings.cshtml
@@ -82,7 +82,7 @@
         </div>
         <div class="row">
             <div class="span100">
-                <h4>@Translation.GetCoreTextTranslation("Begränsningar")</h4>
+                <h4>@Translation.GetCoreTextTranslation("Säkerhet")</h4>
                 <div class="span12">
                     <table class="tableform">
                         <tr>
@@ -90,12 +90,12 @@
                                 @Translation.GetForCase(GlobalEnums.TranslationCaseFields.Department_Id.ToString(), Model.CustomerId)
                             </td>
                             <td>
-                                <input type="checkbox" name="chkDisabledDep" id="chkDisabledDep" onchange="showDisablingDep()" @(Model.DisabledDepartments.Items.Count > 0 ? "checked=checked" : "") value="1" /> @Translation.GetCoreTextTranslation("Inaktivera") @Translation.GetForCase(GlobalEnums.TranslationCaseFields.Department_Id.ToString(), Model.CustomerId)
+                                <input type="checkbox" name="chkDisabledDep" id="chkDisabledDep" onchange="showDisablingDep()" @(Model.AvailableDepartments.Items.Count > 0 ? "checked=checked" : "") value="1" /> @Translation.GetCoreTextTranslation("Begränsa rättighet att skicka order till")
                             </td>
                         </tr>
                     </table>
                 </div>
-                <div class="row" id="divDisabledDeps" @(Model.DisabledDepartments.Items.Count > 0 ? "display:block" : "" )>
+                <div class="row" id="divDisabledDeps" @(Model.AvailableDepartments.Items.Count > 0 ? "display:block" : "" )>
                     <div class="span100">
                         <div class="span12">
                             <table class="tableform">
@@ -114,8 +114,8 @@
                                         <table>
                                             <tr>
                                                 <td>
-                                                    <select id="Settings_AvailableDepartments" multiple="multiple" name="Settings.AvailableDepartments" style="width: 314px; height: 350px">
-                                                        @foreach (var us in Model.AvailableDepartments.Items)
+                                                    <select id="Settings_DisabledDepartmentIds" multiple="multiple" name="Settings.DisabledDepartmentIds" style="width: 314px; height: 350px">
+                                                        @foreach (var us in Model.DisabledDepartments.Items)
                                                         {
                                                             var classType = us.IsActive ? "" : "style=color:lightgray;";
                                                             <option @classType value="@us.Id"> @us.Value </option>
@@ -123,12 +123,12 @@
                                                     </select>
                                                 </td>
                                                 <td>
-                                                    <input type="button" value="&gt;" class="btn" id="addDep" /><br />
-                                                    <input type="button" value="&lt;" class="btn" id="removeDep" />
+                                                    <input type="button" value="&gt;" class="btn" id="toEnabledDep" /><br />
+                                                    <input type="button" value="&lt;" class="btn" id="toDisabledDep" />
                                                 </td>
                                                 <td>
-                                                    <select id="Settings_DisabledDepartmentIds" multiple="multiple" name="Settings.DisabledDepartmentIds" style="width: 314px; height: 350px">
-                                                        @foreach (var us in Model.DisabledDepartments.Items)
+                                                    <select id="Settings_AvailableDepartments" multiple="multiple" name="Settings.AvailableDepartments" style="width: 314px; height: 350px">
+                                                        @foreach (var us in Model.AvailableDepartments.Items)
                                                         {
                                                             var classType = us.IsActive ? "" : "style=color:lightgray;";
                                                             <option @classType value="@us.Id"> @us.Value </option>
@@ -152,18 +152,20 @@
         $("#save_invoice_settings").click(function () {
             if ($("#chkDisabledDep").prop("checked")) {
                 $('#Settings_DisabledDepartmentIds option').prop('selected', true);
+                $('#Settings_AvailableDepartments option').prop('selected', false);
             } else {
                 $('#Settings_DisabledDepartmentIds option').prop('selected', false);
+                $('#Settings_AvailableDepartments option').prop('selected', false);
             }
             $("#invoice_settings_form").submit();
             return true;
         });
 
-        $("#removeDep").click(function () {
+        $("#toEnabledDep").click(function () {
             $("#Settings_DisabledDepartmentIds").find('option:selected').detach().appendTo($("#Settings_AvailableDepartments"));
         });
 
-        $("#addDep").click(function () {
+        $("#toDisabledDep").click(function () {
             $("#Settings_AvailableDepartments").find('option:selected').detach().appendTo($("#Settings_DisabledDepartmentIds"));
         });
 
