[ADD] #60291 Show cases related to inventory

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/CustomInventory/New.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/CustomInventory/New.cshtml
@@ -16,7 +16,7 @@
 
 @section Title
 {
-    @Translation.Get(Model.InventoryViewModel.Name)
+    @Translation.Get(Model.InventoryName)
 }
 
 @section Content
