[FIX] #59440 Questionnaire extra e-mail addresses

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/ModalDialogs/_ExtraEmails.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/ModalDialogs/_ExtraEmails.cshtml
@@ -12,7 +12,8 @@
             adminLabel: '@Translation.GetForJS("Handläggare")',
             emailLabel: '@Translation.GetForJS("E-postgrupp")',
             initLabel: '@Translation.GetForJS("Anmälare")',
-            wgLabel: '@Translation.GetForJS("Driftgrupp")'
+            wgLabel: '@Translation.GetForJS("Driftgrupp")',
+            noResultLabel: '@Translation.GetForJS("Inga resultat matchar")'
         }
         var admins = @Html.SerializeObjectToJson(Model.Administrators.Items);
         var emailGroups = @Html.SerializeObjectToJson(Model.EmailGroups.Items);
